--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Form Pekerjaan Kebun</title>
+  <title>Buat Rencana Kerja Harian</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -41,7 +41,7 @@
         <label>Pengawasan</label>
         <input type="text" name="pengawasan" />
       </div>
-      <button type="submit">Simpan</button>
+      <button type="submit">Buat</button>
     </form>
     <div id="output"></div>
   </div>
