--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Form Rencana Kerja Harian</h1>
+    <h1>Form Rencana Kerja Harian (RKH)</h1>
     <form id="form-pekerjaan">
       <div class="form-grid">
         <label>Kebun</label>
