--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <button type="submit">Buat</button>
     </form>
   </div>
+  <div id="status-message" class="hidden"></div>
   <script src="script.js"></script>
 </body>
 </html>
