--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button type="submit">Buat</button>
     </form>
   </div>
-  <div id="toast" class="toast">Data disimpan</div>
+  <div id="toast" class="toast">Status pesan</div>
   <script src="script.js"></script>
 </body>
 </html>
