--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       <button type="submit">Buat</button>
     </form>
   </div>
-  <div id="toast" class="toast">Status pesan</div>
+  <div id="toast" class="toast">
+    <div class="toast-icon">✔️</div>
+    <div class="toast-message">Data berhasil disimpan</div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
