--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rencana Kerja Harian</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,48 +19,50 @@
     </aside>
 
     <main class="content">
-      <section id="form-section">
+      <!-- Form RKH -->
+      <section id="form-section" class="section-active">
         <h1>Form Rencana Kerja Harian (RKH)</h1>
         <form id="form-pekerjaan">
           <div class="form-grid">
-            <label>Kebun</label>
-            <input type="text" name="kebun" required />
+            <label for="kebun">Kebun</label>
+            <input id="kebun" type="text" name="kebun" required />
 
-            <label>Divisi</label>
-            <input type="text" name="divisi" required />
+            <label for="divisi">Divisi</label>
+            <input id="divisi" type="text" name="divisi" required />
 
-            <label>Tanggal</label>
-            <input type="date" name="tanggal" required />
+            <label for="tanggal">Tanggal</label>
+            <input id="tanggal" type="date" name="tanggal" required />
 
-            <label>Jenis Pekerjaan</label>
-            <input type="text" name="jenis_pekerjaan" required />
+            <label for="jenis_pekerjaan">Jenis Pekerjaan</label>
+            <input id="jenis_pekerjaan" type="text" name="jenis_pekerjaan" required />
 
-            <label>Blok</label>
-            <input type="text" name="blok" required />
+            <label for="blok">Blok</label>
+            <input id="blok" type="text" name="blok" required />
 
-            <label>Luas (Ha)</label>
-            <input type="number" step="0.01" name="luas" required />
+            <label for="luas">Luas (Ha)</label>
+            <input id="luas" type="number" step="0.01" name="luas" required />
 
-            <label>Volume Pekerjaan</label>
-            <input type="text" name="volume" required />
+            <label for="volume">Volume Pekerjaan</label>
+            <input id="volume" type="text" name="volume" required />
 
-            <label>HK</label>
-            <input type="number" name="hk" required />
+            <label for="hk">HK</label>
+            <input id="hk" type="number" name="hk" required />
 
-            <label>Bahan</label>
-            <input type="text" name="bahan" />
+            <label for="bahan">Bahan</label>
+            <input id="bahan" type="text" name="bahan" />
 
-            <label>Pengawasan</label>
-            <input type="text" name="pengawasan" />
+            <label for="pengawasan">Pengawasan</label>
+            <input id="pengawasan" type="text" name="pengawasan" />
           </div>
           <button type="submit">Buat</button>
         </form>
       </section>
 
+      <!-- Laporan -->
       <section id="laporan-section" style="display: none;">
         <h1>Laporan RKH</h1>
         <div id="laporan-container">
-          <!-- Data laporan akan ditampilkan di sini -->
+          <!-- Data laporan akan muncul di sini -->
         </div>
       </section>
     </main>
@@ -74,4 +76,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
