--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <div class="wrapper">
     <aside class="sidebar">
+      <button id="btn-toggle" aria-label="Toggle menu" class="hamburger">&#9776;</button>
       <h2>Menu</h2>
       <nav>
         <ul>
-          <li><a href="#" id="menu-form">Form RKH</a></li>
+          <li><a href="#" id="menu-form" class="active">Form RKH</a></li>
           <li><a href="#" id="menu-laporan">Tampilkan Laporan</a></li>
         </ul>
       </nav>
