--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="wrapper">
     <aside class="sidebar">
+      <h2 class="logo">🌿 RKH Kebun</h2>
       <button id="btn-toggle" aria-label="Toggle menu" class="hamburger">&#9776;</button>
       <h2>Menu</h2>
       <nav>
