--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
     <div class="toast-message">Data berhasil disimpan</div>
   </div>
 
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
