--- a/index.html
+++ b/index.html
@@ -4,76 +4,102 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rencana Kerja Harian</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <aside class="sidebar">
-      <h2 class="logo">🌿 RKH Kebun</h2><button id="btn-toggle" class="hamburger">☰</button>
-      <h2>Menu</h2>
-      <nav>
-        <ul>
-          <li><a href="#" id="menu-form" class="active">Form RKH</a></li>
-          <li><a href="#" id="menu-laporan">Tampilkan Laporan</a></li>
-        </ul>
-      </nav>
-    </aside>
+  <div class="d-flex">
+    <!-- Sidebar -->
+    <nav id="sidebarMenu" class="d-md-block bg-dark text-white sidebar collapse show p-3" style="width: 220px;">
+      <h2 class="fs-5">🌿 RKH Kebun</h2>
+      <button class="btn btn-outline-light d-md-none mb-3" id="btn-toggle">☰ Menu</button>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="#" id="menu-form" class="nav-link active text-white">Form RKH</a>
+        </li>
+        <li>
+          <a href="#" id="menu-laporan" class="nav-link text-white">Tampilkan Laporan</a>
+        </li>
+      </ul>
+    </nav>
 
-    <main class="content">
+    <!-- Konten -->
+    <main class="flex-fill p-4 content">
       <!-- Form RKH -->
-      <section id="form-section" class="section-active">
-        <h1>Form Rencana Kerja Harian (RKH)</h1>
+      <section id="form-section">
+        <h1 class="mb-4">Form Rencana Kerja Harian (RKH)</h1>
         <form id="form-pekerjaan">
-          <div class="form-grid">
-            <label for="kebun">Kebun</label>
-            <input id="kebun" type="text" name="kebun" required />
-
-            <label for="divisi">Divisi</label>
-            <input id="divisi" type="text" name="divisi" required />
-
-            <label for="tanggal">Tanggal</label>
-            <input id="tanggal" type="date" name="tanggal" required />
-
-            <label for="jenis_pekerjaan">Jenis Pekerjaan</label>
-            <input id="jenis_pekerjaan" type="text" name="jenis_pekerjaan" required />
-
-            <label for="blok">Blok</label>
-            <input id="blok" type="text" name="blok" required />
-
-            <label for="luas">Luas (Ha)</label>
-            <input id="luas" type="number" step="0.01" name="luas" required />
-
-            <label for="volume">Volume Pekerjaan</label>
-            <input id="volume" type="text" name="volume" required />
-
-            <label for="hk">HK</label>
-            <input id="hk" type="number" name="hk" required />
-
-            <label for="bahan">Bahan</label>
-            <input id="bahan" type="text" name="bahan" />
-
-            <label for="pengawasan">Pengawasan</label>
-            <input id="pengawasan" type="text" name="pengawasan" />
+          <div class="row g-3">
+            <div class="col-md-6">
+              <label for="kebun" class="form-label">Kebun</label>
+              <input type="text" class="form-control" id="kebun" name="kebun" required>
+            </div>
+            <div class="col-md-6">
+              <label for="divisi" class="form-label">Divisi</label>
+              <input type="text" class="form-control" id="divisi" name="divisi" required>
+            </div>
+            <div class="col-md-6">
+              <label for="tanggal" class="form-label">Tanggal</label>
+              <input type="date" class="form-control" id="tanggal" name="tanggal" required>
+            </div>
+            <div class="col-md-6">
+              <label for="jenis_pekerjaan" class="form-label">Jenis Pekerjaan</label>
+              <input type="text" class="form-control" id="jenis_pekerjaan" name="jenis_pekerjaan" required>
+            </div>
+            <div class="col-md-6">
+              <label for="blok" class="form-label">Blok</label>
+              <input type="text" class="form-control" id="blok" name="blok" required>
+            </div>
+            <div class="col-md-6">
+              <label for="luas" class="form-label">Luas (Ha)</label>
+              <input type="number" step="0.01" class="form-control" id="luas" name="luas" required>
+            </div>
+            <div class="col-md-6">
+              <label for="volume" class="form-label">Volume Pekerjaan</label>
+              <input type="text" class="form-control" id="volume" name="volume" required>
+            </div>
+            <div class="col-md-6">
+              <label for="hk" class="form-label">HK</label>
+              <input type="number" class="form-control" id="hk" name="hk" required>
+            </div>
+            <div class="col-md-6">
+              <label for="bahan" class="form-label">Bahan</label>
+              <input type="text" class="form-control" id="bahan" name="bahan">
+            </div>
+            <div class="col-md-6">
+              <label for="pengawasan" class="form-label">Pengawasan</label>
+              <input type="text" class="form-control" id="pengawasan" name="pengawasan">
+            </div>
           </div>
-          <button type="submit">Buat</button>
+          <button type="submit" class="btn btn-primary w-100 mt-4">Buat</button>
         </form>
       </section>
 
       <!-- Laporan -->
       <section id="laporan-section" style="display: none;">
-        <h1>Laporan RKH</h1>
-        <div id="laporan-container">
-          <!-- Data laporan akan muncul di sini -->
-        </div>
+        <h1 class="mb-4">Laporan RKH</h1>
+        <div id="laporan-container"></div>
       </section>
     </main>
   </div>
 
-  <div id="toast" class="toast">
-    <div class="toast-icon">✔️</div>
-    <div class="toast-message">Data berhasil disimpan</div>
+  <!-- Toast -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1100">
+    <div id="liveToast" class="toast align-items-center text-bg-success border-0" role="alert">
+      <div class="d-flex">
+        <div class="toast-body">Data berhasil disimpan</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+      </div>
+    </div>
   </div>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom Script -->
   <script src="script.js"></script>
 </body>
 </html>
