--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -9,13 +10,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="d-flex">
     <!-- Sidebar -->
-    <nav id="sidebarMenu" class="d-md-block bg-dark text-white sidebar collapse show p-3" style="width: 220px;">
+    <nav id="sidebarMenu" class="bg-dark text-white sidebar p-3">
       <h2 class="fs-5">🌿 RKH Kebun</h2>
-      <button class="btn btn-outline-light d-md-none mb-3" id="btn-toggle">☰ Menu</button>
+      <button class="btn btn-outline-light d-md-none mb-3" id="btn-toggle">\u2630 Menu</button>
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
           <a href="#" id="menu-form" class="nav-link active text-white">Form RKH</a>
@@ -28,7 +30,6 @@
 
     <!-- Konten -->
     <main class="flex-fill p-4 content">
-      <!-- Form RKH -->
       <section id="form-section">
         <h1 class="mb-4">Form Rencana Kerja Harian (RKH)</h1>
         <form id="form-pekerjaan">
@@ -78,7 +79,6 @@
         </form>
       </section>
 
-      <!-- Laporan -->
       <section id="laporan-section" style="display: none;">
         <h1 class="mb-4">Laporan RKH</h1>
         <div id="laporan-container"></div>
