--- a/index.html
+++ b/index.html
@@ -4,101 +4,76 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rencana Kerja Harian</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    .toast-container {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 9999;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-light">
-  <div class="d-flex min-vh-100">
-    <!-- Sidebar -->
-    <aside class="bg-dark text-white p-3" style="width: 220px;">
-      <h2 class="mb-3">🌿 RKH Kebun</h2>
-      <nav class="nav flex-column">
-        <a class="nav-link text-white active" href="#" id="menu-form">Form RKH</a>
-        <a class="nav-link text-white" href="#" id="menu-laporan">Tampilkan Laporan</a>
+<body>
+  <div class="wrapper">
+    <aside class="sidebar">
+      <h2 class="logo">🌿 RKH Kebun</h2><button id="btn-toggle" class="hamburger">☰</button>
+      <h2>Menu</h2>
+      <nav>
+        <ul>
+          <li><a href="#" id="menu-form" class="active">Form RKH</a></li>
+          <li><a href="#" id="menu-laporan">Tampilkan Laporan</a></li>
+        </ul>
       </nav>
     </aside>
 
-    <!-- Main Content -->
-    <main class="flex-fill p-4">
+    <main class="content">
       <!-- Form RKH -->
-      <section id="form-section">
-        <h1 class="mb-4">Form Rencana Kerja Harian (RKH)</h1>
-        <form id="form-pekerjaan" class="row g-3">
-          <div class="col-md-6">
-            <label for="kebun" class="form-label">Kebun</label>
-            <input type="text" class="form-control" id="kebun" name="kebun" required />
+      <section id="form-section" class="section-active">
+        <h1>Form Rencana Kerja Harian (RKH)</h1>
+        <form id="form-pekerjaan">
+          <div class="form-grid">
+            <label for="kebun">Kebun</label>
+            <input id="kebun" type="text" name="kebun" required />
+
+            <label for="divisi">Divisi</label>
+            <input id="divisi" type="text" name="divisi" required />
+
+            <label for="tanggal">Tanggal</label>
+            <input id="tanggal" type="date" name="tanggal" required />
+
+            <label for="jenis_pekerjaan">Jenis Pekerjaan</label>
+            <input id="jenis_pekerjaan" type="text" name="jenis_pekerjaan" required />
+
+            <label for="blok">Blok</label>
+            <input id="blok" type="text" name="blok" required />
+
+            <label for="luas">Luas (Ha)</label>
+            <input id="luas" type="number" step="0.01" name="luas" required />
+
+            <label for="volume">Volume Pekerjaan</label>
+            <input id="volume" type="text" name="volume" required />
+
+            <label for="hk">HK</label>
+            <input id="hk" type="number" name="hk" required />
+
+            <label for="bahan">Bahan</label>
+            <input id="bahan" type="text" name="bahan" />
+
+            <label for="pengawasan">Pengawasan</label>
+            <input id="pengawasan" type="text" name="pengawasan" />
           </div>
-          <div class="col-md-6">
-            <label for="divisi" class="form-label">Divisi</label>
-            <input type="text" class="form-control" id="divisi" name="divisi" required />
-          </div>
-          <div class="col-md-6">
-            <label for="tanggal" class="form-label">Tanggal</label>
-            <input type="date" class="form-control" id="tanggal" name="tanggal" required />
-          </div>
-          <div class="col-md-6">
-            <label for="jenis_pekerjaan" class="form-label">Jenis Pekerjaan</label>
-            <input type="text" class="form-control" id="jenis_pekerjaan" name="jenis_pekerjaan" required />
-          </div>
-          <div class="col-md-4">
-            <label for="blok" class="form-label">Blok</label>
-            <input type="text" class="form-control" id="blok" name="blok" required />
-          </div>
-          <div class="col-md-4">
-            <label for="luas" class="form-label">Luas (Ha)</label>
-            <input type="number" class="form-control" step="0.01" id="luas" name="luas" required />
-          </div>
-          <div class="col-md-4">
-            <label for="volume" class="form-label">Volume Pekerjaan</label>
-            <input type="text" class="form-control" id="volume" name="volume" required />
-          </div>
-          <div class="col-md-4">
-            <label for="hk" class="form-label">HK</label>
-            <input type="number" class="form-control" id="hk" name="hk" required />
-          </div>
-          <div class="col-md-4">
-            <label for="bahan" class="form-label">Bahan</label>
-            <input type="text" class="form-control" id="bahan" name="bahan" />
-          </div>
-          <div class="col-md-4">
-            <label for="pengawasan" class="form-label">Pengawasan</label>
-            <input type="text" class="form-control" id="pengawasan" name="pengawasan" />
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary">Buat</button>
-          </div>
+          <button type="submit">Buat</button>
         </form>
       </section>
 
       <!-- Laporan -->
-      <section id="laporan-section" class="d-none">
-        <h1 class="mt-5">Laporan RKH</h1>
-        <div id="laporan-container" class="mt-3">
+      <section id="laporan-section" style="display: none;">
+        <h1>Laporan RKH</h1>
+        <div id="laporan-container">
           <!-- Data laporan akan muncul di sini -->
         </div>
       </section>
     </main>
   </div>
 
-  <!-- Toast -->
-  <div class="toast-container">
-    <div id="toast" class="toast align-items-center text-white bg-success border-0" role="alert">
-      <div class="d-flex">
-        <div class="toast-body" id="toast-message">Data berhasil disimpan</div>
-        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-    </div>
+  <div id="toast" class="toast">
+    <div class="toast-icon">✔️</div>
+    <div class="toast-message">Data berhasil disimpan</div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
