--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <div class="wrapper">
     <aside class="sidebar">
+      <!-- ✅ Tombol Toggle Sekarang di Dalam Aside -->
       <button id="btn-toggle" class="hamburger">☰</button>
+
       <h2 class="logo">🌿 RKH Kebun</h2>
       <h2>Menu</h2>
       <nav>
