--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <div class="wrapper">
     <aside class="sidebar">
       <!-- ✅ Tombol Toggle Sekarang di Dalam Aside -->
-      <button id="btn-toggle" class="hamburger">☰</button>
 
       <h2 class="logo">🌿 RKH Kebun</h2>
       <h2>Menu</h2>
@@ -25,7 +24,7 @@
     <main class="content">
       <!-- Form RKH -->
       <section id="form-section" class="section-active">
-        <h1>Form Rencana Kerja Harian (RKH)</h1>
+        <h1>Form Rencana Kerja Harian (RKH)</h1><button id="btn-toggle" class="hamburger">☰</button>
         <form id="form-pekerjaan">
           <div class="form-grid">
             <label for="kebun">Kebun</label>
