--- a/index.html
+++ b/index.html
@@ -8,23 +8,18 @@
 </head>
 <body>
   <div class="wrapper">
-    <aside class="sidebar">
-      <!-- ✅ Tombol Toggle Sekarang di Dalam Aside -->
-
       <h2 class="logo">🌿 RKH Kebun</h2>
-      <h2>Menu</h2>
       <nav>
         <ul>
           <li><a href="#" id="menu-form" class="active">Form RKH</a></li>
           <li><a href="#" id="menu-laporan">Tampilkan Laporan</a></li>
         </ul>
       </nav>
-    </aside>
 
     <main class="content">
       <!-- Form RKH -->
       <section id="form-section" class="section-active">
-        <h1>Form Rencana Kerja Harian (RKH)</h1><button id="btn-toggle" class="hamburger">☰</button>
+        <h1>Form Rencana Kerja Harian (RKH)</h1>
         <form id="form-pekerjaan">
           <div class="form-grid">
             <label for="kebun">Kebun</label>
