--- a/index.html
+++ b/index.html
@@ -3,74 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Rencana Kerja Harian</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>RKH Kebun</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .menu-card {
+      transition: transform 0.2s;
+    }
+    .menu-card:hover {
+      transform: scale(1.03);
+    }
+  </style>
 </head>
 <body>
-  <div class="wrapper">
-      <h2 class="logo">🌿 RKH Kebun</h2>
-      <nav>
-        <ul>
-          <li><a href="#" id="menu-form" class="active">Form RKH</a></li>
-          <li><a href="#" id="menu-laporan">Tampilkan Laporan</a></li>
-        </ul>
-      </nav>
 
-    <main class="content">
-      <!-- Form RKH -->
-      <section id="form-section" class="section-active">
-        <h1>Form Rencana Kerja Harian (RKH)</h1>
-        <form id="form-pekerjaan">
-          <div class="form-grid">
-            <label for="kebun">Kebun</label>
-            <input id="kebun" type="text" name="kebun" required />
+  <div class="container py-4">
+    <div class="text-center mb-4">
+      <h1 class="fw-bold">🌿 RKH Kebun</h1>
+      <p class="text-muted">Rencana Kerja Harian</p>
+    </div>
 
-            <label for="divisi">Divisi</label>
-            <input id="divisi" type="text" name="divisi" required />
-
-            <label for="tanggal">Tanggal</label>
-            <input id="tanggal" type="date" name="tanggal" required />
-
-            <label for="jenis_pekerjaan">Jenis Pekerjaan</label>
-            <input id="jenis_pekerjaan" type="text" name="jenis_pekerjaan" required />
-
-            <label for="blok">Blok</label>
-            <input id="blok" type="text" name="blok" required />
-
-            <label for="luas">Luas (Ha)</label>
-            <input id="luas" type="number" step="0.01" name="luas" required />
-
-            <label for="volume">Volume Pekerjaan</label>
-            <input id="volume" type="text" name="volume" required />
-
-            <label for="hk">HK</label>
-            <input id="hk" type="number" name="hk" required />
-
-            <label for="bahan">Bahan</label>
-            <input id="bahan" type="text" name="bahan" />
-
-            <label for="pengawasan">Pengawasan</label>
-            <input id="pengawasan" type="text" name="pengawasan" />
+    <div class="row g-4 justify-content-center">
+      <!-- Menu 1 -->
+      <div class="col-10 col-sm-6">
+        <div class="card menu-card shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Form RKH</h5>
+            <p class="card-text">Isi rencana kerja harian Anda dengan mudah.</p>
+            <a href="#" class="btn btn-success w-100">Buka Form</a>
           </div>
-          <button type="submit">Buat</button>
-        </form>
-      </section>
-
-      <!-- Laporan -->
-      <section id="laporan-section" style="display: none;">
-        <h1>Laporan RKH</h1>
-        <div id="laporan-container">
-          <!-- Data laporan akan muncul di sini -->
         </div>
-      </section>
-    </main>
+      </div>
+
+      <!-- Menu 2 -->
+      <div class="col-10 col-sm-6">
+        <div class="card menu-card shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Tampilkan Laporan</h5>
+            <p class="card-text">Lihat dan analisa laporan kerja yang telah dikumpulkan.</p>
+            <a href="#" class="btn btn-primary w-100">Lihat Laporan</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div id="toast" class="toast">
-    <div class="toast-icon">✔️</div>
-    <div class="toast-message">Data berhasil disimpan</div>
-  </div>
-
-  <script src="script.js" defer></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
