--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Form RKH</h5>
             <p class="card-text">Isi rencana kerja harian Anda dengan mudah.</p>
-            <a href="#" class="btn btn-success w-100">Buka Form</a>
+            <a href="rkh.html" class="btn btn-success w-100">Buka Form</a>
           </div>
         </div>
       </div>
