--- a/rkh.html
+++ b/rkh.html
@@ -60,7 +60,7 @@
 
       <div class="mb-3">
         <label for="pengawas" class="form-label">Pengawas</label>
-        <input type="text" class="form-control" id="pengawas" name="pengawas" required>
+        <input type="text" class="form-control" id="pengawas" name="penanggung_jawab" required>
       </div>
 
       <button type="submit" class="btn btn-success w-100">Buat</button>
