--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Tampilkan Laporan</h5>
             <p class="card-text">Lihat dan analisa laporan kerja yang telah dikumpulkan.</p>
-            <a href="#" class="btn btn-primary w-100">Lihat Laporan</a>
+            <a href="laporanrkh.html" class="btn btn-primary w-100">Lihat Laporan</a>
           </div>
         </div>
       </div>
