--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -30,6 +30,7 @@
             <th>Volume</th>
             <th>HK</th>
             <th>Pengawas</th>
+            <th>Aksi</th>
           </tr>
         </thead>
         <tbody></tbody>
