--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -38,6 +38,10 @@
       </table>
     </div>
   </div>
+  <div id="toast" class="toast">
+    <div class="toast-icon">✔️</div>
+    <div class="toast-message">Notifikasi</div>
+  </div>
 <script src="script.js" defer></script>
 </body>
 </html>
