--- a/rkh.html
+++ b/rkh.html
@@ -6,20 +6,17 @@
   <title>Buat Rencana Kerja Harian (RKH)</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    .btn-kembali {
-      z-index: 1050; /* agar tetap di atas elemen lain */
-    }
-  </style>
 </head>
 <body>
 
-  <!-- Tombol kembali sticky -->
-  <a href="index.html" class="btn btn-outline-secondary position-fixed top-0 start-0 mt-3 ms-3 btn-kembali">
-    ← Kembali
-  </a>
-
   <div class="container py-4">
+    <!-- Tombol kembali biasa (tidak fixed) -->
+    <div class="mb-2">
+      <a href="index.html" class="btn btn-outline-secondary">
+        ← Kembali
+      </a>
+    </div>
+
     <h2 class="mb-4 text-center">Form Rencana Kerja Harian</h2>
     
     <form id="form-pekerjaan">
