--- a/rkh.html
+++ b/rkh.html
@@ -6,12 +6,23 @@
   <title>Buat Rencana Kerja Harian (RKH)</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    .sticky-btn {
+      position: -webkit-sticky; /* untuk Safari */
+      position: sticky;
+      top: 0;
+      background-color: #f8f9fa; /* warna latar sama seperti container */
+      padding-top: 1rem;
+      padding-bottom: 0.5rem;
+      z-index: 1020;
+    }
+  </style>
 </head>
 <body>
 
   <div class="container py-4">
-    <!-- Tombol kembali biasa (tidak fixed) -->
-    <div class="mb-2">
+    <!-- Tombol kembali sticky -->
+    <div class="sticky-btn">
       <a href="index.html" class="btn btn-outline-secondary">
         ← Kembali
       </a>
