--- a/rkh.html
+++ b/rkh.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <nav class="navbar sticky-top navbar-light bg-primary">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
   <div class="container">
     <a href="index.html" class="btn btn-outline-secondary">
         ← Kembali
