--- a/rkh.html
+++ b/rkh.html
@@ -8,25 +8,25 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      padding-top: 70px; /* beri ruang agar isi tidak tertutup navbar fixed-top */
+      padding-top: 70px; /* memberi ruang agar konten tidak tertutup navbar */
     }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-    <div class="container d-flex justify-content-between align-items-center">
-      <a href="index.html" class="btn btn-outline-light btn-sm">
+    <div class="container">
+      <a href="index.html" class="btn btn-outline-light">
         ← Kembali
       </a>
-      <span class="navbar-text text-white fw-bold fs-5 text-center w-100">
-        Form Rencana Kerja Harian
-      </span>
     </div>
   </nav>
 
+  <!-- Judul di bawah navbar -->
   <div class="container py-4">
+    <h2 class="mb-4 text-center">Form Rencana Kerja Harian</h2>
+
     <form id="form-pekerjaan">
       <div class="mb-3">
         <label for="kebun" class="form-label">Kebun</label>
