--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -6,6 +6,11 @@
   <title>Laporan RKH</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="stylelaporanrkh.css" />
+  <style>
+    body {
+      padding-top: 70px; /* memberi ruang agar konten tidak tertutup navbar */
+    }
+  </style>
 </head>
 <body>
 
