--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -13,6 +13,14 @@
   </style>
 </head>
 <body>
+  <!-- Navbar fixed di atas -->
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <div class="container">
+      <a href="index.html" class="btn btn-outline-light">
+        ← Kembali
+      </a>
+    </div>
+  </nav>
 
   <div class="container py-4">
     <h2 class="text-center mb-4">Laporan RKH Bulanan</h2>
