--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   </style>
 </head>
 <body>
+   <!-- Navbar fixed di atas -->
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <div class="container">
+      <a href="index.html" class="btn btn-outline-light">
+        ← Kembali
+      </a>
+    </div>
+  </nav>
 
   <div class="container py-4">
     <div class="text-center mb-4">
