--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
+      padding-top: 70px; /* memberi ruang agar konten tidak tertutup navbar */
       background-color: #f8f9fa;
     }
     .menu-card {
@@ -21,18 +22,11 @@
    <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a href="index.html" class="btn btn-outline-light">
-        ← Kembali
-      </a>
+      <h1 class="fw-bold">🌿 RKH Kebun</h1>
     </div>
   </nav>
 
   <div class="container py-4">
-    <div class="text-center mb-4">
-      <h1 class="fw-bold">🌿 RKH Kebun</h1>
-      <p class="text-muted">Rencana Kerja Harian</p>
-    </div>
-
     <div class="row g-4 justify-content-center">
       <!-- Menu 1 -->
       <div class="col-10 col-sm-6">
