--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
    <!-- Navbar fixed di atas -->
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
     <div class="container">
       <h1 class="fw-bold">🌿 RKH Kebun</h1>
     </div>
