--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="card menu-card shadow-sm">
           <div class="card-body text-center">
             <h5 class="card-title">Tampilkan Laporan</h5>
-            <p class="card-text">Lihat dan analisa laporan kerja yang telah dikumpulkan.</p>
+            <p class="card-text">Lihat dan analisa laporan kerja yang telah dibuat.</p>
             <a href="laporanrkh.html" class="btn btn-primary w-100">Lihat Laporan</a>
           </div>
         </div>
