--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
+      padding-top: 70px; /* memberi ruang agar konten tidak tertutup navbar */
       background-color: #f8f9fa;
     }
     .menu-card {
