--- a/rkh.html
+++ b/rkh.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- Navbar fixed di atas -->
-  <nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
     <div class="container">
       <a href="index.html" class="btn btn-outline-light">
         ← Kembali
