--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -16,7 +16,7 @@
   <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
     <div class="container">
-      <a href="index.html" class="btn btn-outline-light">
+      <a href="index.html" class="btn btn-outline-dark">
         ← Kembali
       </a>
     </div>
