--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -23,7 +23,7 @@
   </nav>
 
   <div class="container py-4">
-    <h2 class="text-center mb-4">Laporan RKH Bulanan</h2>
+    <h2 class="text-center mb-4">Laporan RKH</h2>
 
     <div class="mb-3">
       <label for="bulan" class="form-label">Pilih Bulan</label>
