--- a/rkh.html
+++ b/rkh.html
@@ -43,41 +43,28 @@
         <input type="date" class="form-control" id="tanggal" name="tanggal" required>
       </div>
 
-      <div class="mb-3">
-        <label for="jenis" class="form-label">Jenis Pekerjaan</label>
-        <input type="text" class="form-control" id="jenis" name="jenis" required>
+        <div class="table-responsive">
+        <table id="tabel-pekerjaan" class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Jenis</th><th>Blok</th><th>Luas</th><th>Volume</th><th>HK</th><th>Bahan</th><th>Penanggung Jawab</th><th>Aksi</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><input name="jenis[]" class="form-control" required></td>
+              <td><input name="blok[]" class="form-control" required></td>
+              <td><input name="luas[]" class="form-control" required></td>
+              <td><input name="volume[]" class="form-control" required></td>
+              <td><input name="hk[]" class="form-control" required></td>
+              <td><input name="bahan[]" class="form-control"></td>
+              <td><input name="penanggung_jawab[]" class="form-control" required></td>
+              <td><button type="button" class="btn btn-danger btn-hapus">Hapus</button></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-
-      <div class="mb-3">
-        <label for="blok" class="form-label">Blok</label>
-        <input type="text" class="form-control" id="blok" name="blok" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="luas" class="form-label">Luas (Ha)</label>
-        <input type="number" step="0.01" class="form-control" id="luas" name="luas" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="volume" class="form-label">Volume Pekerjaan</label>
-        <input type="text" class="form-control" id="volume" name="volume" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="hk" class="form-label">HK (Hari Kerja)</label>
-        <input type="number" class="form-control" id="hk" name="hk" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="bahan" class="form-label">Bahan</label>
-        <input type="text" class="form-control" id="bahan" name="bahan">
-      </div>
-
-      <div class="mb-3">
-        <label for="pengawas" class="form-label">Pengawas</label>
-        <input type="text" class="form-control" id="pengawas" name="penanggung_jawab" required>
-      </div>
-
+      <button type="button" class="btn btn-secondary mb-3" id="btn-tambah">+ Tambah Pekerjaan</button>
       <button type="submit" class="btn btn-success w-100">Buat</button>
     </form>
   </div>
