--- a/rkh.html
+++ b/rkh.html
@@ -73,7 +73,7 @@
           <label>Penanggung Jawab</label>
           <input name="penanggung_jawab[]" class="form-control" required>
         </div>
-        <button type="button" class="btn btn-danger btn-hapus">Hapus Pekerjaan</button>
+        <button type="button" class="btn btn-danger btn-hapus-input">Hapus Pekerjaan</button>
       </div>
     </div>
       
