--- a/rkh.html
+++ b/rkh.html
@@ -46,7 +46,7 @@
     <div id="pekerjaan-wrapper">
       <div class="pekerjaan-group border rounded p-3 mb-3">
         <div class="mb-2">
-          <label>Jenis</label>
+          <label>Jenis Pekerjaan</label>
           <input name="jenis[]" class="form-control" required>
         </div>
         <div class="mb-2">
