--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RKH Kebun</title>
+  <title>RKH Asisten Divisi LIBE</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
@@ -22,7 +22,7 @@
    <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
     <div class="container">
-      <h2 class="fw-bold">🌿 RKH Kebun</h2>
+      <h2 class="fw-bold">🌿 RKH Asisten Divisi LIBE</h2>
     </div>
   </nav>
 
