--- a/rkh.html
+++ b/rkh.html
@@ -54,7 +54,7 @@
           <input name="blok[]" class="form-control" required>
         </div>
         <div class="mb-2">
-          <label>Luas</label>
+          <label>Luas (Ha)</label>
           <input name="luas[]" class="form-control" required>
         </div>
         <div class="mb-2">
