--- a/rkh.html
+++ b/rkh.html
@@ -44,7 +44,7 @@
       </div>
 
     <div id="pekerjaan-wrapper">
-      <div class="pekerjaan-group border rounded p-3 mb-3 alert-primary">
+      <div class="pekerjaan-group border rounded p-3 mb-3 alert alert-primary">
         <div class="mb-2">
           <label>Jenis Pekerjaan</label>
           <input name="jenis[]" class="form-control" required>
