--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
   </style>
 </head>
 <body>
-   <!-- Navbar fixed di atas -->
+  <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
-    <div class="container">
-      <h2 class="fw-bold">🌿 RKH Asisten Divisi LIBE</h2>
+    <div class="container d-flex justify-content-between align-items-center">
+      <!-- Logo di kanan -->
+      <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="ms-3" />
+      
+      <h2 class="fw-bold mb-0 text-dark">
+        🌿 RKH Asisten Divisi LIBE
+      </h2>
+      
     </div>
   </nav>
 
