--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="ms-3" />
       
       <h2 class="fw-bold mb-0 text-dark">
-        🌿 RKH Asisten Divisi LIBE
+        RKH Asisten Divisi LIBE
       </h2>
       
     </div>
