--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
 <body>
   <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
-    <div class="container d-flex justify-content-between align-items-center">
-      <!-- Logo di kanan -->
-      <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="ms-3" />
+    <div class="container d-flex align-items-center gap-3">
       
+      <!-- Logo bulat di kiri -->
+      <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="rounded-circle" />
+  
+      <!-- Judul -->
       <h2 class="fw-bold mb-0 text-dark">
-        RKH Asisten Divisi LIBE
+        🌿 RKH Asisten Divisi LIBE
       </h2>
-      
+  
     </div>
   </nav>
 
