--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
       <!-- Judul -->
       <h2 class="fw-bold mb-0 text-dark">
-        🌿 RKH Asisten Divisi LIBE
+        RKH Asisten Divisi LIBE
       </h2>
   
     </div>
