--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <body>
   <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
-    <div class="container d-flex align-items-center gap-3">
+    <div class="container d-flex align-items-center">
       
-      <!-- Logo bulat di kiri -->
-      <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="rounded-circle" />
+      <!-- Logo bulat di kiri dengan sedikit jarak ke teks -->
+      <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="rounded-circle me-2" />
   
       <!-- Judul -->
       <h2 class="fw-bold mb-0 text-dark">
