--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container d-flex align-items-center">
       
       <!-- Logo bulat di kiri dengan sedikit jarak ke teks -->
-      <img src="logo_rkh2_icon.png" alt="Logo" height="40" class="rounded-circle me-2" />
+      <img src="logo_rkh_48x48.png" alt="Logo" height="40" class="rounded-circle me-2" />
   
       <!-- Judul -->
       <h2 class="fw-bold mb-0 text-dark">
