--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 <body>
   <!-- Navbar fixed di atas -->
   <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-top">
-    <div class="container d-flex align-items-center">
-      
-      <!-- Logo bulat di kiri dengan sedikit jarak ke teks -->
-      <img src="logo_rkh_192x192.png" alt="Logo" height="40" class="rounded-circle me-2" />
+    <div class="container-fluid"> <!-- Ganti container jadi full-width -->
+      <div class="d-flex align-items-center ms-3"> <!-- Tambah margin kiri manual -->
+        
+        <!-- Logo bulat -->
+        <img src="logo_rkh_192x192.png" alt="Logo" height="40" class="rounded-circle me-2" />
   
-      <!-- Judul -->
-      <h3 class="fw-bold mb-0 text-dark">
-        RKH Asisten Divisi LIBE
-      </h3>
+        <!-- Judul -->
+        <h3 class="fw-bold mb-0 text-dark">
+          RKH Asisten Divisi LIBE
+        </h3>
   
+      </div>
     </div>
   </nav>
 
