--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -41,8 +41,10 @@
             <th>Divisi</th>
             <th>Jenis Pekerjaan</th>
             <th>Blok</th>
+            <th>Luas (Ha)</th>
             <th>Volume</th>
             <th>HK</th>
+            <th>Bahan</th>
             <th>Pengawas</th>
             <th>Aksi</th>
           </tr>
