--- a/rkh.html
+++ b/rkh.html
@@ -55,7 +55,7 @@
         </div>
         <div class="mb-2">
           <label>Luas (Ha)</label>
-          <input name="luas[]" class="form-control" required>
+          <input type="number" name="luas[]" class="form-control" required>
         </div>
         <div class="mb-2">
           <label>Volume</label>
@@ -63,7 +63,7 @@
         </div>
         <div class="mb-2">
           <label>HK</label>
-          <input name="hk[]" class="form-control" required>
+          <input type="number" name="hk[]" class="form-control" required>
         </div>
         <div class="mb-2">
           <label>Bahan</label>
