--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -30,6 +30,17 @@
       <input type="month" class="form-control" id="bulan" />
     </div>
 
+    <div class="row mb-3">
+      <div class="col-md-6">
+        <label for="tanggalMulai" class="form-label">Tanggal Mulai</label>
+        <input type="date" class="form-control" id="tanggalMulai" />
+      </div>
+      <div class="col-md-6">
+        <label for="tanggalAkhir" class="form-label">Tanggal Akhir</label>
+        <input type="date" class="form-control" id="tanggalAkhir" />
+      </div>
+    </div>
+ 
     <button class="btn btn-primary mb-4" id="btn-cari">Tampilkan</button>
 
     <div class="table-responsive">
