--- a/laporanrkh.html
+++ b/laporanrkh.html
@@ -59,17 +59,17 @@
       <table class="table table-bordered table-striped" id="tabel-laporan">
         <thead>
           <tr>
-            <th>Tanggal</th>
-            <th>Kebun</th>
-            <th>Divisi</th>
-            <th>Jenis Pekerjaan</th>
-            <th>Blok</th>
-            <th>Luas (Ha)</th>
-            <th>Volume</th>
-            <th>HK</th>
-            <th>Bahan</th>
-            <th>Pengawas</th>
-            <th>Aksi</th>
+            <th class="text-center">Tanggal</th>
+            <th class="text-center">Kebun</th>
+            <th class="text-center">Divisi</th>
+            <th class="text-center">Jenis Pekerjaan</th>
+            <th class="text-center">Blok</th>
+            <th class="text-center">Luas (Ha)</th>
+            <th class="text-center">Volume</th>
+            <th class="text-center">HK</th>
+            <th class="text-center">Bahan</th>
+            <th class="text-center">Pengawas</th>
+            <th class="text-center">Aksi</th>
           </tr>
         </thead>
         <tbody></tbody>
