--- a/rkh.html
+++ b/rkh.html
@@ -70,7 +70,7 @@
           <input name="bahan[]" class="form-control">
         </div>
         <div class="mb-2">
-          <label>Penanggung Jawab</label>
+          <label>Pengawas</label>
           <input name="penanggung_jawab[]" class="form-control" required>
         </div>
         <button type="button" class="btn btn-danger btn-hapus-input">Hapus Pekerjaan</button>
