--- a/rkh.html
+++ b/rkh.html
@@ -77,7 +77,7 @@
       </div>
     </div>
       
-      <button type="button" class="btn btn-secondary mb-3" id="btn-tambah">+ Tambah Pekerjaan</button>
+      <button type="button" class="btn btn-primary mb-3" id="btn-tambah">+ Tambah Pekerjaan</button>
       <button type="submit" class="btn btn-success w-100">Buat</button>
     </form>
   </div>
