--- a/index.html
+++ b/index.html
@@ -59,6 +59,29 @@
           </div>
         </div>
       </div>
+
+      <!-- Menu 3 -->
+      <div class="col-10 col-sm-6">
+        <div class="card menu-card shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Form Input Keluhan dan Perbaikan Blok</h5>
+            <p class="card-text">Catat keluhan dan perbaikan kondisi blok secara langsung.</p>
+            <a href="informasi.html" class="btn btn-warning w-100">Isi Form Keluhan</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Menu 4 -->
+      <div class="col-10 col-sm-6">
+        <div class="card menu-card shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Laporan Keluhan dan Perbaikan</h5>
+            <p class="card-text">Lihat rekap keluhan dan tindak lanjut perbaikan blok.</p>
+            <a href="informasi.html" class="btn btn-info w-100">Lihat Laporan</a>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
 
