--- a/keluhan.html
+++ b/keluhan.html
@@ -99,7 +99,9 @@
     <div class="toast-message">Data berhasil disimpan</div>
   </div>
 
-  <script src="script.js" defer></script>
+  <!-- In keluhan.html -->
+  <script src="script.js"></script> <!-- For shared functionality -->
+  <script src="scriptkeluhan.js"></script> <!-- Keluhan-specific functionality -->
   <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
