--- a/keluhan.html
+++ b/keluhan.html
@@ -27,7 +27,7 @@
   <div class="container py-4">
     <h2 class="mb-4 text-center">Form Keluhan Pemanen</h2>
 
-    <form id="form-keluhan">
+    <form id="form-keluhan" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="kebun" class="form-label">Kebun</label>
         <input type="text" class="form-control" id="kebun" name="kebun" required>
